Fix so that page includes do not cause left shift of following content in IE 6
git-svn-id: https://repo.socialtext.net:8999/svn/socialtext/trunk@5225 593ce9bc-2028-0410-bb98-c566b643a948

--- a/nlw/share/css/st/screen.css
+++ b/nlw/share/css/st/screen.css
@@ -2852,7 +2852,6 @@ menu on the page bar.
     border-left: 1px solid #80a9f3;
     padding-left: 5px;
     padding-right: 10px;
-    padding-bottom: 4px;
     margin-left: 12px;
 }
 
